# djangorest

./: .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  env.dev  heroku.yml  manage.py  pyproject.toml  requirements.txt  user_creation.sh
.github/workflows/: build.yml  pr.yaml
djangorest/: asgi.py  settings.py  urls.py  wsgi.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: __init__.py  order_viewset.py
product/: admin.py  urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/tests/test_serializers/: test_category_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: __init__.py
