[tool.poetry]
name = "store"
version = "0.1.0"
description = "Store API"
authors = ["fxbrartur <fxbrartur@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
factory-boy = "^3.2.1"
Django = "^4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
